# doulingo_clone_vibe_code

./: app.config.js  app.json  global.css  metro.config.js  nativewind-env.d.ts  package-lock.json  package.json  posthog-setup-report.md  skills-lock.json  tsconfig.json
app/: _layout.tsx  index.tsx  language.tsx  onboarding.tsx
app/(auth)/: _layout.tsx
app/(tabs)/: _layout.tsx  ai-teacher.tsx  chat.tsx  home.tsx  index.tsx  learn.tsx  profile.tsx
app/api/stream/: calls+api.ts  session+api.ts
app/lesson/: [id].tsx
components/: app-tab-bar.tsx  auth-screen.tsx  lesson-audio-call.native.tsx  lesson-audio-call.web.tsx  lesson-card.tsx  stream-video-provider.native.tsx  stream-video-provider.web.tsx
constants/: images.ts
data/: languages.ts  lessons.ts  units.ts
lib/: posthog.ts  stream-api.ts
store/: use-learning-store.ts
theme/: colors.ts  fonts.ts  index.ts  radii.ts  spacing.ts  typography.ts
types/: assets.d.ts  learning.ts  stream.ts
vision-agent/: Dockerfile  README.md  agent.py  pyproject.toml
vision-agent/tests/: test_agent.py
