[project]
name = "language-teacher-agent"
version = "0.1.0"
description = "Voice-only AI language teacher for the Expo learning app"
requires-python = ">=3.10,<3.14"
dependencies = [
    "vision-agents[getstream,openai]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
